--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ __pycache__/myStats.cpython-310.pyc
 __pycache__/mySignal.cpython-310.pyc
 __pycache__/myPlots.cpython-310.pyc
 __pycache__/myData.cpython-310.pyc
+__pycache__/myDates.cpython-310.pyc
