--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ __pycache__/myData.cpython-310.pyc
 __pycache__/myDates.cpython-310.pyc
 __pycache__/__init__.cpython-310.pyc
 __pycache__/__init__.cpython-310.pyc
+master_functions/__pycache__/__init__.cpython-310.pyc
+master_functions/__pycache__/master_functions.cpython-310.pyc
