--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ __pycache__/__init__.cpython-310.pyc
 __pycache__/__init__.cpython-310.pyc
 master_functions/__pycache__/__init__.cpython-310.pyc
 master_functions/__pycache__/master_functions.cpython-310.pyc
+myStats/__pycache__/myStats.cpython-310.pyc
+myStats/__pycache__/__init__.cpython-310.pyc
+mySignal/__pycache__/mySignal.cpython-310.pyc
+mySignal/__pycache__/__init__.cpython-310.pyc
+myPlots/__pycache__/myPlots.cpython-310.pyc
+myPlots/__pycache__/__init__.cpython-310.pyc
+myDates/__pycache__/myDates.cpython-310.pyc
+myDates/__pycache__/__init__.cpython-310.pyc
+myData/__pycache__/myData.cpython-310.pyc
+myData/__pycache__/__init__.cpython-310.pyc
+__pycache__/__init__.cpython-310.pyc
