--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,16 @@ myDates/__pycache__/__init__.cpython-310.pyc
 myData/__pycache__/myData.cpython-310.pyc
 myData/__pycache__/__init__.cpython-310.pyc
 __pycache__/__init__.cpython-310.pyc
+__pycache__/__init__.cpython-39.pyc
+main/__pycache__/__init__.cpython-39.pyc
+main/__pycache__/functions.cpython-39.pyc
+myData/__pycache__/__init__.cpython-39.pyc
+myData/__pycache__/myData.cpython-39.pyc
+myDates/__pycache__/__init__.cpython-39.pyc
+myDates/__pycache__/myDates.cpython-39.pyc
+myPlots/__pycache__/__init__.cpython-39.pyc
+myPlots/__pycache__/myPlots.cpython-39.pyc
+mySignal/__pycache__/__init__.cpython-39.pyc
+mySignal/__pycache__/mySignal.cpython-39.pyc
+myStats/__pycache__/__init__.cpython-39.pyc
+myStats/__pycache__/myStats.cpython-39.pyc
