--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,15 @@ mySignal/__pycache__/__init__.cpython-39.pyc
 mySignal/__pycache__/mySignal.cpython-39.pyc
 myStats/__pycache__/__init__.cpython-39.pyc
 myStats/__pycache__/myStats.cpython-39.pyc
+myStats/__pycache__/myStats.cpython-310.pyc
+myStats/__pycache__/__init__.cpython-310.pyc
+mySignal/__pycache__/mySignal.cpython-310.pyc
+mySignal/__pycache__/__init__.cpython-310.pyc
+myPlots/__pycache__/myPlots.cpython-310.pyc
+myPlots/__pycache__/__init__.cpython-310.pyc
+myDates/__pycache__/myDates.cpython-310.pyc
+myDates/__pycache__/__init__.cpython-310.pyc
+myData/__pycache__/myData.cpython-310.pyc
+myData/__pycache__/__init__.cpython-310.pyc
+main/__pycache__/functions.cpython-310.pyc
+main/__pycache__/__init__.cpython-310.pyc
