--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ myData/__pycache__/myData.cpython-310.pyc
 myData/__pycache__/__init__.cpython-310.pyc
 main/__pycache__/functions.cpython-310.pyc
 main/__pycache__/__init__.cpython-310.pyc
+myData/__pycache__/myData.cpython-310.pyc
+myData/__pycache__/myData.cpython-310.pyc
+.gitignore
