--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ mySignal/__pycache__/__init__.cpython-310.pyc
 mySignal/__pycache__/mySignal.cpython-310.pyc
 myStats/__pycache__/__init__.cpython-310.pyc
 myStats/__pycache__/myStats.cpython-310.pyc
+mySignal/__pycache__/mySignal.cpython-310.pyc
