--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,5 @@ myPlots/__pycache__/myPlots.cpython-310.pyc
 mySignal/__pycache__/__init__.cpython-310.pyc
 myStats/__pycache__/__init__.cpython-310.pyc
 myStats/__pycache__/myStats.cpython-310.pyc
+myDates/__pycache__/myDates.cpython-310.pyc
+myPlots/__pycache__/myPlots.cpython-310.pyc
